Example code refactored and cleaned up.